# AgentFarm

./: .coveragerc  .env.development  .env.example  .env.production  .eslintrc.cjs  .gitignore  .lychee.toml  .pylintrc  =2.0.0  =2.3.0  ADDITIONAL_FINDINGS.md  ADVANCED_FEATURES.md  AGENTFARM_REVIEW_RECOMMENDATIONS.md  AGENTS.md  AGENT_ACTIONS_CLEANUP_PR.md  AGENT_REFACTORING_SUMMARY.txt  AGGRESSIVE_REFACTORING_SUMMARY.md  ALL_PHASES_COMPLETE.md  ANALYSIS_CODE_STATE_REPORT.md  ANALYSIS_CONTROLLER_SUMMARY.md  ANALYSIS_DOCUMENTATION_COMPLETE.md  ANALYSIS_EXTENSIONS_MASTER_INDEX.md  ANALYSIS_EXTENSIONS_QUICK_REFERENCE.md  ANALYSIS_MODULE_TEST_COVERAGE_REPORT.md  ANALYSIS_REFACTORING.md  ANALYSIS_REFACTORING_PLAN.md  ANALYSIS_REVIEW_REPORT.md  ANT_COLONY_README.md  API_DOCUMENTATION.md  ASYNC_FIXES_SUMMARY.md  BATCH_SPATIAL_UPDATES_IMPLEMENTATION.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  CENTRALIZED_STORAGE_INDEX.md  CENTRALIZED_STORAGE_README.md  CHANGELOG.md  CIRCULAR_DEPENDENCY_FIX.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_SUCCESS.md  COMPLETION_CHECKLIST.md  (+277 more)
.analysis_cache/: 06829e7f7396c623.pkl  2dce47a5465c60f4.pkl  6ba1a17f1d1e1831.pkl  a10aa6e3d3e7cd82.pkl  aa99282afabf8694.pkl  aaea4f18c9856eea.pkl  c2cc7bdada018353.pkl  d9ac8c1662bab3b0.pkl  e1d3490f4f7fe4eb.pkl  efe93ff6a1e76f4c.pkl
.claude/: settings.local.json
.github/: pull_request_template.md
.storybook/: main.ts  preview.ts
ai_knowledge_base/: knowledge_base.json
analysis/: reproducibility.py  simulation_analysis.py  simulation_comparison.py
analysis_results/: experiment_report.md
benchmarks/: README.md  README_REDIS.md  __init__.py  analyze_cprofile.py  check_profiling_status.sh  compare_redis_configs.py  run_benchmarks.py  run_phase1_profiling.py  run_phase2_profiling.py  run_phase3_profiling.py  run_phase4_profiling.py  run_spatial_benchmark_suite.py  run_streaming_benchmark.py
checkpoints/: README.md
conf/: README.md  config.yaml
config/: README.md  base.yaml
config_hydra/: __init__.py  config_hydra.py  config_hydra_models.py  config_hydra_simple.py  config_schema.py
context/: AgentFarm_Overview.md  unified_memory_state_architecture.md
database/: data_retrieval.py
docs/: 404.html  ARCHITECTURE_DIAGRAM.md  CENTRALIZED_STORAGE_GUIDE.md  CONFIG_EXPLORER_UI_UX_REFINEMENT.md  ExperimentQuickStart.md  Gemfile  INDEX.md  LOGGING_MIGRATION.md  LOGGING_QUICK_REFERENCE.md  PROFILING_AND_BENCHMARKING_PLAN.md  QUICK_START.md  README.md  RELEASE.md  STREAMING_CHUNKING.md  STYLE.md  SimulationQuickStart.md  _config.yml  action_data.md  action_registry_system.md  action_space.md  action_system.md  action_system_optimizations.md  agents.md  alien_invasion_combat_simulation.md  api_reference.md  architectural_recommendations.md  batch_spatial_updates_guide.md  batched_intent_environment.md  config_schema_endpoint.md  configuration_api.md  configuration_guide.md  configuration_user_guide.md  consolidated_perception_system.md  core_architecture.md  customization_flexibility.md  data_api.md  data_services.md  data_system.md  database_schema.md  deep_q_learning.md  (+62 more)
e2e/: accessibility.spec.ts  basic.spec.ts  config-workflows.spec.ts  visual-regression.spec.ts
electron/: ipcHandlers.js  main.js  preload.js
examples/: add_carrying_capacity_analysis.py  agent_core_usage_example.py  analysis_controller_example.py  analysis_error_handling_example.py  analysis_example.py  centralized_storage_example.py  flocking_simulation_starter.py  gpu_acceleration_demo.py  logging_examples.py  new_agent_system_demo.py  population_analysis_enhanced_example.py  reward_component_usage.py  static_catapult_example.py  time_series_analysis_example.py
farm/: __init__.py  _version.py  cpu_thread_bootstrap.py
knowledge_base/: entries.json  patterns.json
mcp/: README.md  __init__.py  client_example.py  config.py  demo.py  launcher.py  legacy_README.md  legacy_client_example.py  legacy_launcher.py  legacy_requirements.txt  legacy_server.py  legacy_tests.py  main.py  requirements.txt  (+4 more)
(+1859 files in other folders)
